# postman-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORTED_VERSIONS.md  mkdocs.yml  postman-mcp-prd-v3.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: README.md
assets/launch/: LAUNCH.md
docs/: implementation-plan.md  index.md  prd-checklist.md  roadmap.md
docs/architecture/: diff-engine.md  engine.md  handoff.md  indexing.md  merge-engine.md  overview.md  resolver.md
docs/commands/: createenv.md  index.md  prompt.md  status.md  sync.md  syncall.md  syncapi.md  syncchanges.md
docs/development/: contributing.md  release-process.md
docs/frameworks/: django.md  express.md  fastapi.md  flask.md  nestjs.md  spring.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
examples/: README.md
examples/django-rest-framework/: README.md  urls.py  views.py
examples/django-rest-framework/expected-output/: get-payments-pk.item.json  get-payments.item.json  post-payments.item.json
examples/express-api/: README.md  app.js  package.json
examples/express-api/expected-output/: get-payments-id.item.json
examples/fastapi-basic/: README.md  app.py
examples/fastapi-basic/expected-output/: delete-payments-payment-id.item.json  post-payments.item.json
examples/fastapi-openapi/: README.md  app.py  requirements.txt
examples/fastapi-openapi/expected-output/: get-payments-payment-id.item.json  post-payments.item.json
examples/flask-api/: README.md  app.py
examples/flask-api/expected-output/: delete-payments-payment-id.item.json  get-payments-payment-id.item.json  post-payments.item.json
examples/nestjs-api/: README.md  payments.controller.ts
examples/nestjs-api/expected-output/: post-payments.item.json
examples/prompts/: README.md  ecommerce.md  enterprise.md  fintech.md  healthcare.md
examples/spring-api/: README.md
examples/spring-api/expected-output/: delete-api-payments-id.item.json  get-api-payments-id.item.json  post-api-payments.item.json
examples/spring-api/src/main/java/com/acme/: PaymentController.java  PaymentRequest.java  PaymentResponse.java
postman_mcp/: __init__.py  cli.py  models.py  server.py
postman_mcp/commands/: createenv.md  prompt.md  status.md  sync.md  syncall.md  syncapi.md  syncchanges.md
postman_mcp/confidence/: __init__.py  grades.py  policy.py  scorer.py
postman_mcp/config/: __init__.py  store.py
postman_mcp/contract/: __init__.py  publish.py  schema.json  schema.py  sync_schema.py
postman_mcp/contract/playbook/: discovery.md  workflow.md
postman_mcp/contract/playbook/frameworks/: custom.md  django.md  express.md  fastapi.md  flask.md  nestjs.md  spring.md
postman_mcp/contract/playbook/skills/: api-discovery.md  auth-discovery.md  collection-builder.md  dto-discovery.md  environment-discovery.md  folder-builder.md  metadata-builder.md  project-analysis.md  request-builder.md  response-builder.md
postman_mcp/diff/: __init__.py  render.py
postman_mcp/engine/: __init__.py  builder.py  examples.py  tests.py
postman_mcp/git/: __init__.py  reader.py  run.py
postman_mcp/index/: __init__.py  cache.py  candidates.py  corpus.py  fields.py  graph.py  prefixes.py  scanner.py  services.py  symbols.py
postman_mcp/input/: __init__.py  detect.py  openapi.py  resolver.py  structural.py
postman_mcp/input/parsers/: __init__.py  base.py  django.py  express.py  fastapi.py  flask.py  nestjs.py  spring.py
postman_mcp/model/: __init__.py  adapter.py  store.py
postman_mcp/plan/: __init__.py  compiler.py  render.py
postman_mcp/postman/: __init__.py  client.py  merge.py
postman_mcp/retrieve/: __init__.py  assembler.py  budget.py  slicer.py
postman_mcp/safety/: __init__.py  audit.py  rollback.py  snapshots.py
postman_mcp/secrets/: __init__.py  manager.py
postman_mcp/service/: __init__.py  aiplan.py  compare.py  context.py  environment.py  filesync.py  repo.py  status.py  sync.py
postman_mcp/setup/: __init__.py  installer.py  registration.py
postman_mcp/verify/: __init__.py  candidates.py  evidence.py  fields.py  graph_witness.py  pipeline.py  render.py  report.py
postman_mcp/witness/: __init__.py  engine.py
tests/: benchmark_corpus.py  benchmark_fields.py  benchmark_retrieval.py  conftest.py  test_accuracy.py  test_aiplan_service.py  test_cite.py  test_cli.py  test_client.py  test_confidence_scorer.py  test_contract_schema.py  test_engine.py  test_evidence_grades.py  test_examples.py  test_field_accuracy.py  test_filesync.py  test_git.py  test_git_run.py  test_graph_witness.py  test_index.py  test_index_fields.py  test_merge.py  test_model_store.py  test_models_config_secrets.py  test_openapi.py  test_parsers.py  test_parsers_flask_spring.py  test_parsers_ts.py  test_phase5_cleanup_evaluation.py  test_plan_compiler.py  test_resolver_and_diff.py  test_retrieve.py  test_safety.py  test_service.py  test_setup.py  test_status_and_env.py  test_structural_fastapi.py  test_sync_contract.py  test_test_scripts.py  test_verify_pipeline.py  (+2 more)
