[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postman-mcp"
version = "3.0.0"
description = "An MCP server for Claude Code that generates and updates Postman requests from your API code, with a diff before every write."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Logesh Kumar", email = "logeshkumar.dev@gmail.com" }]
keywords = ["postman", "mcp", "claude-code", "openapi", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "mcp>=1.2.0",        # Python MCP SDK (stdio server + tool registration)
    "httpx>=0.27.0",     # Postman REST calls
    "pydantic>=2.5.0",   # route-model validation + FastAPI body introspection
    "keyring>=24.0.0",   # OS credential store access
    "typer>=0.12.0",     # the CLI
    "pyyaml>=6.0",       # OpenAPI YAML specs
]

[project.optional-dependencies]
# Precise symbol extraction for non-Python languages (V3 index layer).
# Without it, Python uses stdlib `ast` (exact) and other languages use the
# built-in degraded regex backend — everything still works.
treesitter = [
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.4",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",     # mock httpx
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs>=1.6.0",
    "pymdown-extensions>=10.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]

[project.scripts]
postman-mcp = "postman_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/logesh-works/postman-mcp"
Documentation = "https://logesh-works.github.io/postman-mcp/"
Repository = "https://github.com/logesh-works/postman-mcp"
Issues = "https://github.com/logesh-works/postman-mcp/issues"
Changelog = "https://github.com/logesh-works/postman-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
# The slash-command markdown lives inside postman_mcp/commands and is bundled
# automatically as package data. No force-include needed; that would double-add the files.
packages = ["postman_mcp"]
artifacts = ["postman_mcp/commands/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["postman_mcp"]
omit = ["postman_mcp/server.py"]
